--- a/src/components/Web/MenuTop/MenuTop.scss
+++ b/src/components/Web/MenuTop/MenuTop.scss
@@ -6,6 +6,7 @@
     background-color: $background-dark-web;
     border: 0;
     display: flex;
+    justify-content: space-between;
     align-items: center;
 
     li {
@@ -25,9 +26,8 @@
         padding: 10px;
 
         img {
-            width: 200px;
+            width: 100px;
             height: 60px;
-            width: 342px;
         }
     }
 }
