--- a/src/components/Web/ReviewsCourses/ReviewCourses.scss
+++ b/src/components/Web/ReviewsCourses/ReviewCourses.scss
@@ -1,8 +1,14 @@
 @import "../../../scss/index.scss";
 
+
+.width {
+    width: 100%;
+}
+
 .reviews-courses {
     margin-top: 100px;
     margin-bottom: 50px;
+    width: 100%;
 
     &__title {
         text-align: center;
