--- a/src/components/Web/Blog/PostInfo/PostInfo.scss
+++ b/src/components/Web/Blog/PostInfo/PostInfo.scss
@@ -6,7 +6,7 @@
     &__title {
         text-align: center;
         margin-bottom: 0;
-        color: $font-light;
+        color: white;
         font-weight: bold;
         font-size: 40px;
     }
@@ -19,8 +19,12 @@
     }
 
     &__description {
-        color: $primary-color-dark;
+        color: white;
         font-size: 16px;
         margin-bottom: 100px;
     }
+}
+
+p>span {
+    color: white;
 }
