--- a/src/components/Web/HowMyCoursesWork/HowMyCoursesWork.scss
+++ b/src/components/Web/HowMyCoursesWork/HowMyCoursesWork.scss
@@ -14,6 +14,7 @@
             font-size: 32px;
             font-weight: bold;
             text-transform: uppercase;
+            margin-bottom: 40px;
         }
 
         h3 {
@@ -58,5 +59,16 @@
                 color: $primary-color-dark;
             }
         }
+    }
+}
+
+.see-more {
+    margin-top: 40px;
+}
+
+@media screen and (max-width: 780px){
+    .home-courses__title{
+        font-size: 30px;
+        width: 100%;
     }
 }
