--- a/src/components/Web/MainBanner/MainBanner.scss
+++ b/src/components/Web/MainBanner/MainBanner.scss
@@ -25,7 +25,7 @@
 
         h2 {
             color: #fff;
-            font-size: 60px;
+            font-size: 45px;
             font-weight: bold;
             line-height: 1;
         }
@@ -38,7 +38,17 @@
 }
 
 strong {
-    color: #347295;
+    color: #fff;
     text-shadow: 0px 0px 4px rgba(255, 255, 255, 0.74);
+}
 
+@media screen and (max-width: 780px){
+    .main-banner__title{
+        font-size: 30px;
+        text-align: center;
+    }
+
+    .main-banner__title>strong{
+        font-size: 30px;
+    }
 }
