--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -1,63 +1,84 @@
-.login {
-    background-color: white;
+.contact {
+    background-color: #181818;
     height: 100vh;
+    width: 100%;
+    /* max-width: 62.5rem; */
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 40px;
 }
 
-.login__container {
-    width: 300px;
+.contact__container {
+    margin-top: 100px;
+    width: 60%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding: 20px;
     /* border: 1px solid lightgray; */
 }
 
-.login__container>h1 {
+.contact__container>h1 {
+    font-size: 50px;
+}
+
+.contact__container>h1 {
     font-weight: 500;
     margin-bottom: 20px;
+    color: white;
+    width: 100%;
 }
 
-.login__container>form>h5 {
+.contact__container>form>h5 {
     margin-bottom: 5px;
+    color: white;
 }
 
-.login__container>form>input {
+.contact__container>form>input {
     height: 30px;
     margin-bottom: 10px;
     background-color: white;
     width: 98%;
 }
 
-.login__container>form>textarea {
+.contact__container>form>textarea {
     height: 180px;
     margin-bottom: 10px;
     background-color: white;
     width: 98%;
 }
 
-.login__container>p {
+.contact__container>p {
     margin-top: 15px;
     margin-bottom: 15px;
     font-size: 12px;
+    color: whitesmoke;
 }
 
-.login__signInButton {
-    background-color: #f0c14b;
+.contact__signInButton {
     border-radius: 2px;
-    width: 100%;
+    width: 98%;
     height: 30px;
     border: 1px solid;
     margin-top: 10px;
-    border-color: #a88734 #9c7e31 #846a29;
-    color: #111;
+    color: #fff;
+    font-weight: bold;
 }
 
-.login__logo {
+.contact__logo {
     margin-top: 20px;
     margin-bottom: 20px;
     width: 150px;
     object-fit: contain;
+}
+
+@media screen and (max-width: 780px){
+    .contact__container{
+        width: 80%;
+    }
+
+    .contact__container>h1{
+        font-size: 2rem;
+    }
 }
