--- a/src/components/Web/Blog/PostInfo/PostInfo.scss
+++ b/src/components/Web/Blog/PostInfo/PostInfo.scss
@@ -1,7 +1,8 @@
 @import "../../../../scss/index.scss";
 
 .post-info {
-    margin-top: 50px;
+    margin-top: 200px;
+    color: white;
 
     &__title {
         text-align: center;
@@ -16,15 +17,36 @@
         color: $font-light;
         width: 100%;
         margin-bottom: 100px;
+        margin-top: 20px;
     }
 
     &__description {
         color: white;
         font-size: 16px;
         margin-bottom: 100px;
+
+        &__description>p {
+            color: white;
+        }
     }
 }
 
 p>span {
     color: white;
+}
+
+p {
+    color: white;
+}
+
+.white {
+    color: white;
+}
+
+@media screen and (max-width: 780px){
+    .post-info {
+        width: 90%;
+        margin: 10px;
+        margin-top: 200px;
+    }
 }
